# snap-coin-pool

./: .env.example  .gitignore  Cargo.toml
node-mainnet/blockchain/blockchain/: snap.000000000000A4A1
pool-node/blockchain/blockchain/: db  snap.0000000000011630
src/: handle_block.rs  handle_rewards.rs  handle_share.rs  job_handler.rs  main.rs  pool_api_server.rs  pool_stats_server.rs  poolstate.rs  share_store.rs
static/: pool_dashboard.html
