# ============================================================================
# File: Cargo.toml
# Package: snap-coin-pool
# Version: 0.1.0
# Edition: 2024
#
# Description:
# Snap Coin mining pool with optional WebSocket stats server.
# ============================================================================
[package]
name = "snap-coin-pool"
version = "0.1.0"
edition = "2024"

# ----------------------------------------------------------------------------
# Dependencies
# ----------------------------------------------------------------------------
[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dotenvy = "0.15.7"
envy = "0.4.2"
num-bigint = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snap-coin = "11.2.2"
tokio = { version = "1.49.0", features = ["full"] }

# --- Stats server (Axum WebSocket + static dashboard) ---
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"

# ============================================================================
# End of Cargo.toml
# ============================================================================
